; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/busses/extr_i2c-ibm_iic.c_iic_interrupt_mode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/busses/extr_i2c-ibm_iic.c_iic_interrupt_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ibm_iic_private = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@INTRMSK_EIMTC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ibm_iic_private*, i32)* @iic_interrupt_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iic_interrupt_mode(%struct.ibm_iic_private* %0, i32 %1) #0 {
  %3 = alloca %struct.ibm_iic_private*, align 8
  %4 = alloca i32, align 4
  store %struct.ibm_iic_private* %0, %struct.ibm_iic_private** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.ibm_iic_private*, %struct.ibm_iic_private** %3, align 8
  %6 = getelementptr inbounds %struct.ibm_iic_private, %struct.ibm_iic_private* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @INTRMSK_EIMTC, align 4
  br label %14

13:                                               ; preds = %2
  br label %14

14:                                               ; preds = %13, %11
  %15 = phi i32 [ %12, %11 ], [ 0, %13 ]
  %16 = call i32 @out_8(i32* %8, i32 %15)
  ret void
}

declare dso_local i32 @out_8(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
